텍스트 수정

--- a/grand_festival/web/index.html
+++ b/grand_festival/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>공정녀의 칠순을 축하 드립니다!</title>
+  <title>칠순 축하</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
