--- a/grand_festival/web/index.html
+++ b/grand_festival/web/index.html
@@ -24,10 +24,10 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="공정녀의 칠순을 축하 드립니다!">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/칠순.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="칠순.png"/>
 
   <title>칠순 축하</title>
   <link rel="manifest" href="manifest.json">
