--- a/grand_festival/web/index.html
+++ b/grand_festival/web/index.html
@@ -18,12 +18,12 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="공정녀의 칠순을 축하 드립니다!">
+  <meta name="description" content="공정녀님의 칠순을 축하 드립니다!">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="공정녀의 칠순을 축하 드립니다!">
+  <meta name="apple-mobile-web-app-title" content="공정녀님의 칠순을 축하 드립니다!">
   <link rel="apple-touch-icon" href="icons/칠순.png">
 
   <!-- Favicon -->
